--- a/.build/buildspec.yml
+++ b/.build/buildspec.yml
@@ -1,1 +1,19 @@
+version: 0.2
 
+env:
+  variables:
+
+phases:
+  install:
+    commands:
+      - CODEBUILD_WORKING_DIR=`pwd`
+      - sudo apt install -y binutils gcc-avr avr-libc uisp avrdude flex byacc bison
+
+  pre_build:
+    commands:
+
+  build:
+    commands:
+
+  post_build:
+    commands:
