--- a/.build/buildspec.yml
+++ b/.build/buildspec.yml
@@ -9,7 +9,7 @@ phases:
       - CODEBUILD_WORKING_DIR=`pwd`
       - sudo apt install -y binutils gcc-avr avr-libc uisp avrdude flex byacc bison
 
-  pre_build
+  pre_build:
 #    commands:
 
   build:
