--- a/.build/buildspec.yml
+++ b/.build/buildspec.yml
@@ -1,6 +1,6 @@
 version: 0.2
 
-env:
+#env:
 #  variables:
 
 phases:
@@ -9,11 +9,11 @@ phases:
       - CODEBUILD_WORKING_DIR=`pwd`
       - sudo apt install -y binutils gcc-avr avr-libc uisp avrdude flex byacc bison
 
-  pre_build:
+#  pre_build:
 #    commands:
 
-  build:
+#  build:
 #    commands:
 
-  post_build:
+#  post_build:
 #    commands:
