--- a/.build/buildspec.yml
+++ b/.build/buildspec.yml
@@ -8,8 +8,8 @@ phases:
     commands:
       - CODEBUILD_WORKING_DIR=`pwd`
       - sudo apt-get update
-      - sudo apt-get upgrade all
-      - sudo apt-get install gcc-avr binutils-avr avr-libc
+      - sudo apt-get upgrade -y
+      - sudo apt-get install -y gcc-avr binutils-avr avr-libc
 
 
 #  pre_build:
