--- a/.build/buildspec.yml
+++ b/.build/buildspec.yml
@@ -10,12 +10,14 @@ phases:
       - sudo apt-get update
       - sudo apt-get install -y gcc-avr binutils-avr avr-libc
 
-
 #  pre_build:
 #    commands:
 
-#  build:
-#    commands:
+  build:
+    commands:
+      - cd 
+      - make config
+      - make
 
 #  post_build:
 #    commands:
