--- a/.build/buildspec.yml
+++ b/.build/buildspec.yml
@@ -9,6 +9,7 @@ phases:
       - CODEBUILD_WORKING_DIR=`pwd`
       - sudo apt-get update
       - sudo apt-get install -y gcc-avr binutils-avr avr-libc
+      - git submodule update --init --recursive
 
 #  pre_build:
 #    commands:
